--- a/FoodCollector/Base.lproj/Main.storyboard
+++ b/FoodCollector/Base.lproj/Main.storyboard
@@ -293,36 +293,53 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ehH-Us-rhV">
-                                            <rect key="frame" x="20" y="17" width="15" height="21"/>
+                                            <rect key="frame" x="20" y="20" width="15" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="3cE-hK-CaX"/>
                                                 <constraint firstAttribute="width" constant="15" id="gRP-EK-Eh7"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z5c-Yd-PoJ">
-                                            <rect key="frame" x="55" y="19" width="40" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z5c-Yd-PoJ">
+                                            <rect key="frame" x="60" y="22" width="350" height="18"/>
                                             <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="16"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Oa-A1-9fz">
-                                            <rect key="frame" x="540" y="19" width="37" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Oa-A1-9fz">
+                                            <rect key="frame" x="429" y="22" width="148" height="17"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="148" id="xdI-gW-kaV"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="15"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="Z5c-Yd-PoJ" firstAttribute="centerY" secondItem="tsZ-CP-eaz" secondAttribute="centerY" id="0G6-ga-qsE"/>
                                         <constraint firstAttribute="leadingMargin" secondItem="ehH-Us-rhV" secondAttribute="leading" constant="-12" id="KlC-0g-Npy"/>
                                         <constraint firstItem="Z5c-Yd-PoJ" firstAttribute="top" secondItem="tsZ-CP-eaz" secondAttribute="topMargin" constant="11" id="PSv-Q8-lv3"/>
                                         <constraint firstItem="2Oa-A1-9fz" firstAttribute="trailing" secondItem="tsZ-CP-eaz" secondAttribute="trailingMargin" constant="-15" id="Pp4-17-xFS"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="2Oa-A1-9fz" secondAttribute="bottom" constant="13" id="coK-RZ-q2j"/>
                                         <constraint firstItem="2Oa-A1-9fz" firstAttribute="top" secondItem="tsZ-CP-eaz" secondAttribute="topMargin" constant="11" id="jfL-M2-5qb"/>
+                                        <constraint firstItem="2Oa-A1-9fz" firstAttribute="centerY" secondItem="tsZ-CP-eaz" secondAttribute="centerY" id="myx-83-mKX"/>
+                                        <constraint firstItem="2Oa-A1-9fz" firstAttribute="leading" secondItem="Z5c-Yd-PoJ" secondAttribute="trailing" constant="19" id="nGW-i2-LGT"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="Z5c-Yd-PoJ" secondAttribute="bottom" constant="13" id="nTz-OP-DiC"/>
                                         <constraint firstItem="ehH-Us-rhV" firstAttribute="trailing" secondItem="Z5c-Yd-PoJ" secondAttribute="leading" constant="-20" id="oPH-MC-e6T"/>
-                                        <constraint firstAttribute="centerY" secondItem="ehH-Us-rhV" secondAttribute="centerY" constant="3" id="t3B-8p-LWy"/>
+                                        <constraint firstAttribute="centerY" secondItem="ehH-Us-rhV" secondAttribute="centerY" id="t3B-8p-LWy"/>
+                                        <constraint firstItem="Z5c-Yd-PoJ" firstAttribute="leading" secondItem="ehH-Us-rhV" secondAttribute="trailing" constant="25" id="vTD-XC-Pdr"/>
                                         <constraint firstItem="Z5c-Yd-PoJ" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="2Oa-A1-9fz" secondAttribute="leading" constant="-445" id="ycj-NH-byS"/>
                                     </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="oPH-MC-e6T"/>
+                                            <exclude reference="PSv-Q8-lv3"/>
+                                            <exclude reference="nTz-OP-DiC"/>
+                                            <exclude reference="ycj-NH-byS"/>
+                                            <exclude reference="coK-RZ-q2j"/>
+                                            <exclude reference="jfL-M2-5qb"/>
+                                        </mask>
+                                    </variation>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="iconImageView" destination="ehH-Us-rhV" id="4RI-VF-i2K"/>
