--- a/FoodCollector/Base.lproj/PublicationEditorTVCContactPublisherCustomCell.xib
+++ b/FoodCollector/Base.lproj/PublicationEditorTVCContactPublisherCustomCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -17,20 +17,17 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8cF-9F-VqL">
                         <rect key="frame" x="77" y="12" width="228" height="21"/>
-                        <animations/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="gLb-Vj-YRz">
                         <rect key="frame" x="18" y="7" width="51" height="31"/>
-                        <animations/>
                         <connections>
                             <action selector="contactPubliserSwitchAction:" destination="KGk-i7-Jjw" eventType="valueChanged" id="1IK-0C-cfC"/>
                         </connections>
                     </switch>
                 </subviews>
-                <animations/>
                 <constraints>
                     <constraint firstAttribute="trailingMargin" secondItem="8cF-9F-VqL" secondAttribute="trailing" constant="7" id="0i7-6d-D6N"/>
                     <constraint firstItem="8cF-9F-VqL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4" id="1hM-l1-nNM"/>
@@ -39,7 +36,6 @@
                     <constraint firstItem="8cF-9F-VqL" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="uX5-fn-2tB"/>
                 </constraints>
             </tableViewCellContentView>
-            <animations/>
             <connections>
                 <outlet property="cellLabel" destination="8cF-9F-VqL" id="1Cf-0I-Yle"/>
                 <outlet property="contactPubliserSwitch" destination="gLb-Vj-YRz" id="Map-YD-gQA"/>
