--- a/FoodCollector/Base.lproj/PublicationEditorTVCAudianceCustomCell.xib
+++ b/FoodCollector/Base.lproj/PublicationEditorTVCAudianceCustomCell.xib
@@ -15,13 +15,20 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ovB-KB-KfQ" userLabel="Buttom Line">
+                        <rect key="frame" x="20" y="41.5" width="290" height="2"/>
+                        <color key="backgroundColor" red="0.86666666670000003" green="0.86666666670000003" blue="0.86666666670000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="2" id="HQJ-LY-5Sa"/>
+                        </constraints>
+                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dxu-5x-WfU">
                         <rect key="frame" x="8" y="11" width="121" height="21"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="121" id="c1D-xG-kVr"/>
                             <constraint firstAttribute="height" constant="21" id="zIW-jK-Z9Y"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -30,7 +37,7 @@
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="YmO-5Q-Hdw"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" red="0.20392156862745098" green="0.59607843137254901" blue="0.85882352941176465" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -47,8 +54,11 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="BHl-5b-TYm" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="0D3-gn-N7O"/>
+                    <constraint firstItem="ovB-KB-KfQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="7gz-IC-JXu"/>
+                    <constraint firstAttribute="trailing" secondItem="ovB-KB-KfQ" secondAttribute="trailing" constant="10" id="901-4B-nKR"/>
                     <constraint firstAttribute="trailingMargin" secondItem="5ZV-OV-LO9" secondAttribute="trailing" id="9J0-04-2hl"/>
                     <constraint firstItem="BHl-5b-TYm" firstAttribute="leading" relation="lessThanOrEqual" secondItem="dxu-5x-WfU" secondAttribute="trailing" constant="20" id="A0F-gl-mhW"/>
+                    <constraint firstAttribute="bottom" secondItem="ovB-KB-KfQ" secondAttribute="bottom" id="Ean-cD-3aX"/>
                     <constraint firstItem="5ZV-OV-LO9" firstAttribute="leading" secondItem="BHl-5b-TYm" secondAttribute="trailing" constant="8" id="IeV-JO-Vjf"/>
                     <constraint firstItem="5ZV-OV-LO9" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="YxU-CP-qTK"/>
                     <constraint firstItem="dxu-5x-WfU" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="daN-0b-eXj"/>
