--- a/FoodCollector/Base.lproj/PublicationEditorTVCOnlyLabelCustomCell.xib
+++ b/FoodCollector/Base.lproj/PublicationEditorTVCOnlyLabelCustomCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -15,24 +15,31 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gmF-Ue-KLb" userLabel="Buttom Line">
+                        <rect key="frame" x="20" y="43" width="290" height="2"/>
+                        <color key="backgroundColor" red="0.8666666666666667" green="0.8666666666666667" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="2" id="xfQ-Gx-qQt"/>
+                        </constraints>
+                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8cF-9F-VqL">
                         <rect key="frame" x="8" y="12" width="297" height="21"/>
-                        <animations/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
-                <animations/>
                 <constraints>
+                    <constraint firstAttribute="trailing" secondItem="gmF-Ue-KLb" secondAttribute="trailing" constant="10" id="08o-eU-HMf"/>
                     <constraint firstAttribute="trailingMargin" secondItem="8cF-9F-VqL" secondAttribute="trailing" constant="7" id="0i7-6d-D6N"/>
                     <constraint firstItem="8cF-9F-VqL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4" id="1hM-l1-nNM"/>
                     <constraint firstAttribute="centerY" secondItem="8cF-9F-VqL" secondAttribute="centerY" id="ItC-CE-Uft"/>
+                    <constraint firstAttribute="bottom" secondItem="gmF-Ue-KLb" secondAttribute="bottom" id="aCW-Ao-gDI"/>
+                    <constraint firstItem="gmF-Ue-KLb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="an8-rW-njC"/>
                     <constraint firstItem="8cF-9F-VqL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="kaI-jn-zcr"/>
                     <constraint firstItem="8cF-9F-VqL" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="uX5-fn-2tB"/>
                 </constraints>
             </tableViewCellContentView>
-            <animations/>
             <connections>
                 <outlet property="cellLabel" destination="8cF-9F-VqL" id="1Cf-0I-Yle"/>
             </connections>
