--- a/FoodCollector/Base.lproj/FCPublishAddressEditorMyLocationCustomCell.xib
+++ b/FoodCollector/Base.lproj/FCPublishAddressEditorMyLocationCustomCell.xib
@@ -12,7 +12,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="45"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="okz-8U-Qoa">
@@ -22,9 +22,10 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CurentLocationIcon" translatesAutoresizingMaskIntoConstraints="NO" id="REn-ci-4XE">
-                        <rect key="frame" x="15" y="15" width="16" height="16"/>
+                        <rect key="frame" x="15" y="14" width="16" height="16"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="16" id="5Mi-0H-uwb"/>
+                            <constraint firstAttribute="height" constant="16" id="bLh-tJ-P4q"/>
                         </constraints>
                     </imageView>
                 </subviews>
@@ -37,6 +38,12 @@
                     <constraint firstItem="okz-8U-Qoa" firstAttribute="leading" secondItem="REn-ci-4XE" secondAttribute="trailing" constant="13" id="aLT-hM-oOv"/>
                     <constraint firstAttribute="centerY" secondItem="okz-8U-Qoa" secondAttribute="centerY" id="gnb-E3-mwd"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="NNz-df-J2R"/>
+                        <exclude reference="09Y-Fj-PFf"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <point key="canvasLocation" x="353" y="355.5"/>
         </tableViewCell>
